--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="game.js" defer></script>
     <title>Rock Paper Scissor</title>
 </head>
 <body>
-    <script src="game.js"></script>
+    <h1>Rock Paper Scissor</h1>
+    <p id="score-indentifier">Computer Score | Your Score  </p>
+    <div id="result-div">
+      
+      <div id="score-box"> 
+      <p id="computer-score">0</p>
+      <p id="player-score">0</p>
+      </div> 
+
+      <p id="result">Play against Computer</p>
+    </div>
+
+    <div id="choices">
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissor">Scissor</button>
+    </div>
+    
+  
+   
 </body>
 </html>
